<resources>
    <string name="app_name">Sell it</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login </string>
    <string name="action_sign_up">Sign up </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm password</string>
    <string name="p_picture">Profile Picture</string>
    <string name="browse">Browse</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
